@@ -1,3 +1,4 @@
+ - Issue error by default when solvers don't converge (parameter "error_on_convergence")
  - Add option to print matrix/vector for a VariationalProblem
  - Trilinos backend now works in parallel
  - Remove Mesh refine members functions. Use free refine(...) functions instead
